--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,22 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": ".NET Core Launch (console)",
+      "name": ".NET Core Launch (macOS)",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
       "program": "/Applications/Godot_mono.app/Contents/MacOS/Godot",
+      "args": [],
+      "cwd": "${workspaceFolder}",
+      "console": "internalConsole",
+      "stopAtEntry": false
+    },
+     {
+      "name": ".NET Core Launch (Windows)",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build",
+      "program": "E:/Godot_v4.2.2-stable_mono_win64/Godot_v4.2.2-stable_mono_win64.exe",
       "args": [],
       "cwd": "${workspaceFolder}",
       "console": "internalConsole",
